Change color for fix contrast error in wave extension

--- a/assets/style.css
+++ b/assets/style.css
@@ -110,7 +110,7 @@ img {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #807731;
+  background-color: #807733;
   border-radius: 0;
 }
 .nav-pills .nav-link {
